Fixed virtual scroll jumping

--- a/src/app/main/search/search-result/search-result.component.scss
+++ b/src/app/main/search/search-result/search-result.component.scss
@@ -5,10 +5,11 @@
   overflow: hidden;
   box-shadow: 0 15px 35px 0 rgba(42, 51, 83, .12), 0 5px 15px rgba(0, 0, 0, .06) !important;
   transition: all 200ms ease-out 0s;
+  height: 342px !important;
 
   .mat-card-image {
     margin: 0;
-    min-height: 180px;
+    height: 248px !important;
   }
 
   mat-card-content {
